syntax = "proto3";

package pixel_plaza;

option go_package = "compiled/pixel_plaza/auth";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service Auth {
  rpc LogIn(LogInRequest) returns (LogInResponse) {}
  rpc IsAccessTokenValid(IsAccessTokenValidRequest) returns (IsAccessTokenValidResponse) {}
  rpc IsRefreshTokenValid(IsRefreshTokenValidRequest) returns (IsRefreshTokenValidResponse) {}
  rpc RefreshToken(google.protobuf.Empty) returns (RefreshTokenResponse) {}
  rpc LogOut(google.protobuf.Empty) returns (LogOutResponse) {}
  rpc GetRefreshTokenInformation(GetRefreshTokenInformationRequest) returns (GetRefreshTokenInformationResponse) {}
  rpc GetRefreshTokensInformation(google.protobuf.Empty) returns (GetRefreshTokensInformationResponse) {}
  rpc RevokeRefreshToken(RevokeRefreshTokenRequest) returns (RevokeRefreshTokenResponse) {}
  rpc RevokeRefreshTokens(google.protobuf.Empty) returns (RevokeRefreshTokensResponse) {}
  rpc AddPermission(AddPermissionRequest) returns (AddPermissionResponse) {}
  rpc RevokePermission(RevokePermissionRequest) returns (RevokePermissionResponse) {}
  rpc GetPermission (GetPermissionRequest) returns (GetPermissionResponse) {}
  rpc GetPermissions(google.protobuf.Empty) returns (GetPermissionsResponse) {}
  rpc AddRolePermission(AddRolePermissionRequest) returns (AddRolePermissionResponse) {}
  rpc RevokeRolePermission(RevokeRolePermissionRequest) returns (RevokeRolePermissionResponse) {}
  rpc GetRolePermissions(GetRolePermissionsRequest) returns (GetRolePermissionsResponse) {}
  rpc AddRole(AddRoleRequest) returns (AddRoleResponse) {}
  rpc RevokeRole(RevokeRoleRequest) returns (RevokeRoleResponse) {}
  rpc GetRoles(google.protobuf.Empty) returns (GetRolesResponse) {}
  rpc AddUserRole(AddUserRoleRequest) returns (AddUserRoleResponse) {}
  rpc RevokeUserRole(RevokeUserRoleRequest) returns (RevokeUserRoleResponse) {}
  rpc GetUserRoles(GetUserRolesRequest) returns (GetUserRolesResponse) {}
}

message RefreshTokenInformation {
  string id = 1;
  string ipv4_address = 2;
  google.protobuf.Timestamp issued_at = 3;
  google.protobuf.Timestamp expires_at = 4;
}

message Permission {
  string permission_id = 1;
  string resource = 2;
  string action = 3;
  string description = 4;
}

message Role {
  string role_id = 1;
  string name = 2;
  string description = 3;
}

message LogInRequest {
  string username = 1;
  string password = 2;
}

message LogInResponse {
  string message = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message IsAccessTokenValidRequest {
  string jwt_id = 1;
}

message IsAccessTokenValidResponse {
  string message = 1;
  bool is_valid = 2;
}

message IsRefreshTokenValidRequest {
  string jwt_id = 1;
}

message IsRefreshTokenValidResponse {
  string message = 1;
  bool is_valid = 2;
}

message RefreshTokenResponse {
  string message = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message LogOutResponse {
  string message = 1;
}

message GetRefreshTokenInformationRequest {
  string jwt_id = 1;
}

message GetRefreshTokenInformationResponse {
  string message = 1;
  RefreshTokenInformation refresh_token_information = 2;
}

message GetRefreshTokensInformationResponse {
  string message = 1;
  repeated RefreshTokenInformation refresh_tokens_information = 2;
}

message RevokeRefreshTokenRequest {
  string jwt_id = 1;
}

message RevokeRefreshTokenResponse {
  string message = 1;
}

message RevokeRefreshTokensResponse {
  string message = 1;
}

message AddPermissionRequest {
  string permission = 1;
}

message AddPermissionResponse {
  string message = 1;
}

message RevokePermissionRequest {
  string permission_id = 1;
}

message RevokePermissionResponse {
  string message = 1;
}

message GetPermissionsResponse {
  string message = 1;
  repeated Permission permission = 2;
}

message GetPermissionRequest {
  string permission_id = 1;
}

message GetPermissionResponse {
  string message = 1;
  Permission permission = 2;
}

message AddRolePermissionRequest {
  string role_id = 1;
  string permission_id = 2;
}

message AddRolePermissionResponse {
  string message = 1;
}

message RevokeRolePermissionRequest {
  string role_id = 1;
  string permission_id = 2;
}

message RevokeRolePermissionResponse {
  string message = 1;
}

message GetRolePermissionsRequest {
  string role_id = 1;
}

message GetRolePermissionsResponse {
  string message = 1;
  repeated string permissions_id = 2;
}

message AddRoleRequest {
  string role = 1;
}

message AddRoleResponse {
  string message = 1;
}

message RevokeRoleRequest {
  string role_id = 1;
}

message RevokeRoleResponse {
  string message = 1;
}

message GetRolesResponse {
  string message = 1;
  repeated Role roles = 2;
}

message AddUserRoleRequest {
  string role_id = 2;
  string user_id = 1;
}

message AddUserRoleResponse {
  string message = 1;
}

message RevokeUserRoleRequest {
  string role_id = 2;
  string user_id = 1;
}

message RevokeUserRoleResponse {
  string message = 1;
}

message GetUserRolesRequest {
  string user_id = 1;
}

message GetUserRolesResponse {
  string message = 1;
  repeated string roles_id = 2;
}